<resources>
    <string name="app_name">Marketim</string>
    
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="username_or_pass_invalid">Kullanıcı adı veya şifre yanlış.</string>
    <string name="no_empty">Boş alan bırakılamaz.</string>
    <string name="fetch_error_title">Veri Alınamadı</string>
    <string name="fetch_error_message">Bağlantı sağlanamadı. Lütfen daha sonra tekrar deneyin.</string>
    <string name="ok">Tamam</string>
    <string name="loading">Yükleniyor</string>
    <string name="loaded">Yüklendi</string>
    <string name="orders">Siparişlerim</string>
    <string name="exit">Çıkış Yap</string>
    <string name="will_you_exit_the_app">Uygulamadan çıkacak mısın?</string>
    <string name="exit_app">Çık</string>
    <string name="cancel">İptal</string>

    <string-array name="months_array">
        <item>Ocak</item>
        <item>Şubat</item>
        <item>Mart</item>
        <item>Nisan</item>
        <item>Mayıs</item>
        <item>Haziran</item>
        <item>Temmuz</item>
        <item>Ağustos</item>
        <item>Eylül</item>
        <item>Ekim</item>
        <item>Kasım</item>
        <item>Aralık</item>
    </string-array>
</resources>
