<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/activity_login_editUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_profile_vector"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/activity_login_editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_lock_vector"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center|start">

            <Switch
                android:id="@+id/activity_login_switchRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="17sp"
                android:layout_marginStart="3dp"
                android:gravity="center"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_red"/>

    </LinearLayout>

</LinearLayout>